# RdRpCATCH

./: .gitignore  CITATION.cff  LICENSE  README.md  meta.yaml  meta_4test.yaml  pyproject.toml
.github/workflows/: CI_publish_pypi.yml
benchmark/: Colabscan.yml  README.md
benchmark/benchmark_july_2024/results/: pos_neg_summary.tsv
benchmark/benchmark_july_2024/scripts/: pos_neg_analysis.py
colabscan/: colabscanner_wrapper.py
colabscan/cli/: args.py
colabscan/colabscan_scripts/: fetch_dbs.py  format_pyhmmer_out.py  mmseqs_tax.py  paths.py  plot.py  utils.py
colabscanner/scripts/: colabscanner.py  fetch_dbs.py  format_pyhmmer_out.py  gui.py  parse_args.py  paths.py  plot.py  run_seqkit.py  seqkit.py  transeq.py  utils.py
dependencies/: colabscan_test_env.yaml
jupyter_notebooks/: ColabScan.ipynb  ColabScan_local.ipynb  Preprocess.ipynb  README.md  gitignore.txt  selected_gencode_6ers.fasta
rdrpcatch/: rdrpcatch_wrapper.py
rdrpcatch/cli/: args.py
rdrpcatch/rdrpcatch_scripts/: fetch_dbs.py  format_pyhmmer_out.py  gui.py  mmseqs_tax.py  paths.py  plot.py  run_pyhmmer.py  run_seqkit.py  utils.py
testing/: meta_4test.yaml  rdrpcatch-1.0.0-py312_1.tar.bz2  rdrpcatch-1.0.0-py312_2.tar.bz2  rdrpcatch_test_env.yaml  test_translate.fasta
testing/rdrpcatch_test_translate/: test_translate_rdrpcatch_output_annotated.tsv
testing/rdrpcatch_test_translate/test_translate_gff_files/: test_translate_full_aminoacid_rdrpcatch.gff3
testing/rdrpcatch_test_translate/test_translate_rdrpcatch_fasta/: test_translate_full_aminoacid_contigs.fasta  test_translate_trimmed_aminoacid_contigs.fasta
testing/rdrpcatch_test_translate/test_translate_rdrpcatch_plots/: test_translate_ID_score_plot.html  test_translate_contig_coverage_plot.html  test_translate_evalue_plot.html  test_translate_norm_bitscore_contig_plot.html  (+3 more)
testing/scan_test/: selected_gencode_6ers_rdrpcatch_output_annotated.tsv
(+81 files in other folders)
